force-app/main/default/objects/iManage_Folders__c/iManage_Folders__c.object-meta.xml
<CustomObject>
    <label>iManage Folders</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>iManage Folders#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iManage Folders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>