force-app/main/default/objects/iManage_Folders__c/fields/edit_date__c.field-meta.xml
<CustomField>
    <fullName>edit_date__c</fullName>
    <label>edit_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>