force-app/main/default/objects/iManage_Folders__c/fields/effective_security__c.field-meta.xml
<CustomField>
    <fullName>effective_security__c</fullName>
    <label>effective_security</label>
    <length>255</length>
    <type>Text</type>
</CustomField>