force-app/main/default/objects/iManage_Folders__c/fields/folder_type__c.field-meta.xml
<CustomField>
    <fullName>folder_type__c</fullName>
    <label>folder_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>