force-app/main/default/objects/iManage_Folders__c/fields/has_documents__c.field-meta.xml
<CustomField>
    <fullName>has_documents__c</fullName>
    <label>has_documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>