force-app/main/default/objects/iManage_Folders__c/fields/iManage_Workspace__c.field-meta.xml
<CustomField>
    <fullName>iManage_Workspace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>iManage Workspace</label>
    <referenceTo>iManage_Workspace__c</referenceTo>
    <relationshipLabel>iManage Folders</relationshipLabel>
    <relationshipName>iManage_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>