force-app/main/default/objects/iManage_Folders__c/fields/is_container_saved_search__c.field-meta.xml
<CustomField>
    <fullName>is_container_saved_search__c</fullName>
    <label>is_container_saved_search</label>
    <length>255</length>
    <type>Text</type>
</CustomField>