force-app/main/default/objects/iManage_Folders__c/fields/is_external_as_normal__c.field-meta.xml
<CustomField>
    <fullName>is_external_as_normal__c</fullName>
    <label>is_external_as_normal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>