force-app/main/default/objects/iManage_Folders__c/fields/IsConfigured__c.field-meta.xml
<CustomField>
    <fullName>IsConfigured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConfigured</label>
    <type>Checkbox</type>
</CustomField>