force-app/main/default/objects/iManage_Folders__c/fields/IsProcessed__c.field-meta.xml
<CustomField>
    <fullName>IsProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProcessed</label>
    <type>Checkbox</type>
</CustomField>