force-app/main/default/objects/iManage_Folders__c/fields/owner__c.field-meta.xml
<CustomField>
    <fullName>owner__c</fullName>
    <label>owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>