force-app/main/default/objects/iManage_Folders__c/fields/owner_description__c.field-meta.xml
<CustomField>
    <fullName>owner_description__c</fullName>
    <label>owner_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>