force-app/main/default/objects/iManage_Folders__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentId</label>
    <referenceTo>iManage_Folders__c</referenceTo>
    <relationshipLabel>iManage Folders</relationshipLabel>
    <relationshipName>iManage_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>