force-app/main/default/objects/iManage_Folders__c/fields/recordId__c.field-meta.xml
<CustomField>
    <fullName>recordId__c</fullName>
    <label>recordId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>