force-app/main/default/objects/iManage_Folders__c/fields/view_type__c.field-meta.xml
<CustomField>
    <fullName>view_type__c</fullName>
    <label>view_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>