force-app/main/default/objects/iManage_Folders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>iManage_Workspace__c</columns>
    <columns>ParentId__c</columns>
    <columns>recordId__c</columns>
    <columns>id__c</columns>
    <columns>name__c</columns>
    <columns>has_subfolders__c</columns>
    <columns>parent_id__c</columns>
    <columns>default_security__c</columns>
    <columns>folder_type__c</columns>
    <columns>wstype__c</columns>
    <columns>view_type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>