force-app/main/default/objects/iManage_Folders__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>iManage_Workspace__c</columns>
    <columns>name__c</columns>
    <columns>recordId__c</columns>
    <columns>ParentId__c</columns>
    <columns>parent_id__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>